--- a/index.html
+++ b/index.html
@@ -1636,14 +1636,16 @@
                                 {currentPlan === PLANS.FREE ? 'Maybe Later' : 'Close'}
                             </button>
                         </div>
-                        <p style={{
-                            color: '#fff',
-                            fontSize: '14px',
-                            marginTop: '16px',
-                            fontWeight: '500'
-                        }}>
-                            6 FREE reels per day. Resets at midnight.
-                        </p>
+                        <div style={{ width: '100%', textAlign: 'center', marginTop: '20px' }}>
+                            <p style={{
+                                color: '#fff',
+                                fontSize: '14px',
+                                fontWeight: '500',
+                                margin: 0
+                            }}>
+                                6 FREE reels per day. Resets at midnight.
+                            </p>
+                        </div>
                     </div>
                 </div>
             );
