--- a/index.html
+++ b/index.html
@@ -1623,12 +1623,13 @@
                             <button
                                 onClick={onClose}
                                 style={{
-                                    padding: '8px 16px',
+                                    width: '50%',
+                                    padding: '10px 16px',
                                     background: 'rgba(255,255,255,0.1)',
                                     border: '1px solid rgba(255,255,255,0.2)',
                                     borderRadius: '8px',
                                     color: '#fff',
-                                    fontSize: '13px',
+                                    fontSize: '14px',
                                     fontWeight: '500',
                                     cursor: 'pointer'
                                 }}
@@ -1640,8 +1641,8 @@
                             color: 'rgba(255,255,255,0.7)',
                             fontSize: '13px',
                             fontWeight: '500',
-                            marginTop: '12px',
-                            marginBottom: '0'
+                            marginTop: '8px',
+                            marginBottom: '10px'
                         }}>
                             6 FREE reels per day. Resets at midnight.
                         </p>
