Add Film Music to Media tagline

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
             { id: 'gambling', name: 'Gambling', tag: 'Hot', description: 'Casinos, sports betting, and prediction markets', views: '1.6M', color: '#ef4444' },
             { id: 'gaming', name: 'Gaming', tag: 'Trending', description: 'Video games, esports, and interactive entertainment', views: '2.3M', color: '#ec4899' },
             { id: 'music', name: 'Music', tag: 'Popular', description: 'Record labels, streaming platforms, and entertainment industry', views: '1.9M', color: '#8b5cf6' },
-            { id: 'media', name: 'Media', tag: 'Trending', description: 'Broadcasting, publishing, social media, and content creation', views: '1.7M', color: '#f472b6' },
+            { id: 'media', name: 'Media', tag: 'Trending', description: 'Film, music, broadcasting, publishing, social media, and content creation', views: '1.7M', color: '#f472b6' },
             { id: 'business-news', name: 'Business News', tag: 'New', description: 'Latest trends, market insights, and industry updates', views: '1.3M', color: '#10b981' },
             { id: 'strategy', name: 'Strategy', tag: 'Essential', description: 'Competitive positioning, market entry, and winning tactics', views: '1.1M', color: '#0ea5e9' },
             { id: 'dealmaking', name: 'Dealmaking', tag: 'Skill', description: 'Deal-making techniques and persuasion mastery', views: '950K', color: '#f97316' },
