--- a/index.html
+++ b/index.html
@@ -102,57 +102,57 @@
         const SAMPLE_VIDEOS = [
             {
                 id: '1',
-                title: 'REITs Explained',
-                description: 'How Real Estate Investment Trusts work and why they matter.',
-                url: 'videos/1_REITs.mp4',
+                title: 'Spotify Streamshare',
+                description: 'How Spotify shares revenue with the license holders of music.',
+                url: 'https://storage.googleapis.com/moonreelz-reels/1_spotify.mp4',
                 thumbnail: '',
-                category: 'Finance',
-                duration: '2:40'
+                category: 'Music & Streaming',
+                duration: '3:02'
             },
             {
                 id: '2',
-                title: 'Defence Contractor Consolidation',
-                description: 'The dramatic story of how the defence industry consolidated.',
-                url: 'videos/2_Defence_contractor_consolidation.mp4',
+                title: 'Hermès Birkin',
+                description: 'The business model behind the most exclusive handbag in the world.',
+                url: 'https://storage.googleapis.com/moonreelz-reels/2_birkin.mp4',
                 thumbnail: '',
-                category: 'Defence Tech',
-                duration: '3:03'
+                category: 'Luxury',
+                duration: '2:30'
             },
             {
                 id: '3',
-                title: 'Anduril: The Arcade of Defence',
-                description: 'How Palmer Luckey built a defence tech empire after Oculus.',
-                url: 'videos/3_Anduril.mp4',
+                title: 'Webtoon: Wait or Pay',
+                description: 'How Webtoon turned free comics into a billion dollar business.',
+                url: 'https://storage.googleapis.com/moonreelz-reels/3_webtoon.mp4',
                 thumbnail: '',
-                category: 'Defence Tech',
-                duration: '2:56'
+                category: 'Entertainment',
+                duration: '3:00'
             },
             {
                 id: '4',
-                title: 'Retro Arcade REITs',
-                description: 'The surprising intersection of gaming nostalgia and real estate.',
-                url: 'videos/4_Retro_arcade_REITs.mp4',
+                title: 'Jason Calacanis',
+                description: 'How a scrappy entrepreneur became one of the greatest angel investors.',
+                url: 'https://storage.googleapis.com/moonreelz-reels/4_calacanis.mp4',
                 thumbnail: '',
-                category: 'Finance',
-                duration: '2:44'
+                category: 'Tech & Investing',
+                duration: '2:45'
             },
             {
                 id: '5',
-                title: 'Kwinana',
-                description: 'The business story behind this unique opportunity.',
-                url: 'videos/5_Kwinana.mp4',
+                title: 'Airline Loyalty Programs',
+                description: 'How airlines turned frequent flyer points into their most profitable product.',
+                url: 'https://storage.googleapis.com/moonreelz-reels/5_airline.mp4',
                 thumbnail: '',
-                category: 'Real Estate',
-                duration: '1:30'
+                category: 'Travel & Business',
+                duration: '3:00'
             },
             {
                 id: '6',
-                title: 'Global Median Income',
-                description: 'Understanding wealth distribution around the world.',
-                url: 'videos/6_Global_Median_Income.mp4',
+                title: 'Starting a Formula One Team',
+                description: 'The extraordinary cost and business of launching a new F1 team.',
+                url: 'https://storage.googleapis.com/moonreelz-reels/6_f1.mp4',
                 thumbnail: '',
-                category: 'Finance',
-                duration: '2:30'
+                category: 'Sport & Business',
+                duration: '2:45'
             }
         ];
 
@@ -1161,7 +1161,7 @@
                     period: isYearly ? '/year' : '/month',
                     subtitle: 'for one person',
                     savings: 'Save 19%',
-                    features: ['Unlimited reels', 'Choose any category', 'Choose specific reels', 'Personalised feed', 'Ad supported'],
+                    features: ['Unlimited reels', 'Choose any category', 'Choose specific reels', 'Personalised feed', 'Suggest a reel', 'Ad supported'],
                     color: '#8B5CF6',
                     popular: true,
                     current: currentPlan === PLANS.PRO
@@ -1190,7 +1190,8 @@
                         'Progress tracking — See completion rates across your team',
                         'Assign content — Push specific reels to team members',
                         'Team leaderboards — Gamify watching, drive engagement',
-                        'Slack/Teams integration — Share reels directly in channels'
+                        'Slack/Teams integration — Share reels directly in channels',
+                        'Request a reel — Tell us what you want and we\'ll create it'
                     ],
                     color: '#3B82F6'
                 }
